Fix spacing when no results found
https://weboo.atlassian.net/browse/ID-2636

--- a/css/layout-css/agenda-style.upload.css
+++ b/css/layout-css/agenda-style.upload.css
@@ -1139,7 +1139,6 @@
 .new-agenda-list-container .search-results.no-results {
   opacity: 0.5;
   text-align: center;
-  margin-top: 20vh;
 }
 
 .new-agenda-list-container .no-results-holder {
